# nn_with_cpp

./: CMakeLists.txt  README.md  build.bat  imgui.ini  vcpkg.json
data/MNIST/: raw_data
src/: main.cpp
src/backend/cpu/: CpuOps.cpp  CpuOps.h
src/backend/gpu/: GpuOps.cu  GpuOps.cuh
src/data/: DataManager.cpp  DataManager.h
src/gui/: GuiManager.cpp  GuiManager.h  Visualizer.cpp  Visualizer.h
src/nlp/: Parser.cpp  Parser.h
src/nn/: Loss.cpp  Loss.h  Model.cpp  Model.h  Tensor.cpp  Tensor.h  nn_types.h
src/nn/layers/: Activation.cpp  Activation.h  Dense.cpp  Dense.h  Layer.cpp  Layer.h  Loss.cpp  Softmax.cpp  Softmax.h
src/nn/optimizers/: Adam.cpp  Adam.h  Optimizer.cpp  Optimizer.h  SGD.cpp  SGD.h
src/utils/: ApiKey.h  Gemini.cpp  Gemini.h  Http.cpp  Http.h  Zip.cpp  Zip.h
